<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/dialog_agregar_sku"
        android:gravity="center"
        android:textSize="35sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                android:background="@drawable/rectangle"
                android:id="@+id/sku_new_product_init"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:gravity="center"
                android:hint="@string/sku_producto"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                android:id="@+id/cantidad_new_product_init"
                android:background="@drawable/rectangle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:hint="@string/cantidad"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_aceptar_sku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btn_cancelar_sku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textSize="20sp"
            />

    </LinearLayout>
</LinearLayout>